se agrega fecha en bruselas

--- a/tour-europa.html
+++ b/tour-europa.html
@@ -50,6 +50,9 @@
       <a class="link" href="https://bit.ly/3XsNewV" target="_blank">
         <i class="fas fa-ticket-alt">&nbsp;&nbsp;</i>Sábado 19 de Octubre - Rotterdam
       </a>
+      <a class="link" href="https://bit.ly/3TzZ1YT" target="_blank">
+        <i class="fas fa-ticket-alt">&nbsp;&nbsp;</i>Domingo 20 de Octubre - Bruselas
+      </a>
     </div>
   </body>
 </html>
